some simple fixes and make this work on mobile

--- a/src/smc-webapp/_account.sass
+++ b/src/smc-webapp/_account.sass
@@ -8,6 +8,7 @@
   opacity: 0.75
   border-radius: 4px
   padding: 5px
+  margin-top: 10px
   z-index: 1
   box-shadow: 8px 8px 4px #888
   cursor: arrow
@@ -33,6 +34,6 @@
   border: 0px
   font: inherit
   vertical-align: baseline
-  
+
 .smc-sign-in-form a, .smc-sign-in-form a:link, .smc-sign-in-form a:visited
   color:#FFF
